--- a/app/src/main/res/layout/fragment_donation.xml
+++ b/app/src/main/res/layout/fragment_donation.xml
@@ -2,36 +2,37 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="120dp"
-    android:orientation="vertical">
+    android:orientation="horizontal">
+    <!--<ImageView-->
+        <!--android:layout_width="250px"-->
+        <!--android:layout_height="250px"-->
+        <!--android:background="@color/grey"/>-->
+
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/donation_id"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/text_margin"
-            android:textAppearance="?attr/textAppearanceListItem"
-            />
+            android:paddingLeft="10dp"
+            android:layout_margin="5dp"
+            android:text="Donation ID"
+            android:textAppearance="?attr/textAppearanceListItem" />
 
         <TextView
-            android:id="@+id/donation_donorId"
+            android:id="@+id/donation_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/text_margin"
-            android:textAppearance="?attr/textAppearanceListItem"
-            />
-
+            android:layout_margin="5dp"
+            android:paddingLeft="10dp"
+            android:text="Donation Title"
+            android:textAppearance="?attr/textAppearanceListItem" />
 
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/donation_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
-        android:textAppearance="?attr/textAppearanceListItem"
-        />
+
+
 </LinearLayout>
