--- a/app/src/main/res/layout/fragment_donation_list.xml
+++ b/app/src/main/res/layout/fragment_donation_list.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/list"
+    android:id="@+id/donation_list"
     android:name="com.example.donorapp.DonationFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,4 +10,6 @@
     android:layout_marginRight="16dp"
     app:layoutManager="LinearLayoutManager"
     tools:context=".DonationListing.DonationListFragment"
-    tools:listitem="@layout/fragment_donation" />
+    tools:listitem="@layout/fragment_donation"
+    android:text="@string/no_data"
+    />
