--- a/app/src/main/res/layout/fragment_donation.xml
+++ b/app/src/main/res/layout/fragment_donation.xml
@@ -1,12 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="120dp"
     android:orientation="horizontal">
-    <!--<ImageView-->
-        <!--android:layout_width="250px"-->
-        <!--android:layout_height="250px"-->
-        <!--android:background="@color/grey"/>-->
+
+    <ImageView
+        android:id="@+id/donation_image"
+        android:layout_width="250px"
+        android:layout_height="250px"
+        android:adjustViewBounds="false"
+        android:background="@color/grey"
+        android:scaleType="center"
+        app:srcCompat="@drawable/ic_image_icon_24dp" />
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="wrap_content"
