--- a/app/src/main/res/layout/activity_booking_page.xml
+++ b/app/src/main/res/layout/activity_booking_page.xml
@@ -35,6 +35,15 @@
                     android:textColor="@color/white"
                     android:textSize="36sp" /> <!--Booking Title-->
 
+                <TextView
+                    android:id="@+id/booking_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="20dp"
+                    android:textColor="@color/white"
+                    android:text="@string/bookingTitle"
+                    android:textSize="13sp" /> <!-- Booking info -->
+
                 <EditText
                     android:id="@+id/timeET"
                     android:layout_width="250dp"
